syntax = "proto3";

package common.v1;

import "google/protobuf/any.proto";
import "google/rpc/status.proto";

option go_package = "github.com/vitalstream/protos/common/v1;commonv1";
option java_package = "com.vitalstream.common.v1";
option java_multiple_files = true;

// Standard error codes
enum ErrorCode {
  ERROR_CODE_UNSPECIFIED = 0;
  ERROR_CODE_OK = 1;
  ERROR_CODE_CANCELLED = 2;
  ERROR_CODE_UNKNOWN = 3;
  ERROR_CODE_INVALID_ARGUMENT = 4;
  ERROR_CODE_DEADLINE_EXCEEDED = 5;
  ERROR_CODE_NOT_FOUND = 6;
  ERROR_CODE_ALREADY_EXISTS = 7;
  ERROR_CODE_PERMISSION_DENIED = 8;
  ERROR_CODE_RESOURCE_EXHAUSTED = 9;
  ERROR_CODE_FAILED_PRECONDITION = 10;
  ERROR_CODE_ABORTED = 11;
  ERROR_CODE_OUT_OF_RANGE = 12;
  ERROR_CODE_UNIMPLEMENTED = 13;
  ERROR_CODE_INTERNAL = 14;
  ERROR_CODE_UNAVAILABLE = 15;
  ERROR_CODE_DATA_LOSS = 16;
  ERROR_CODE_UNAUTHENTICATED = 17;
  
  // VitalStream specific error codes
  ERROR_CODE_PATIENT_NOT_FOUND = 1000;
  ERROR_CODE_DEVICE_NOT_FOUND = 1001;
  ERROR_CODE_ALARM_NOT_FOUND = 1002;
  ERROR_CODE_INVALID_ECG_DATA = 1003;
  ERROR_CODE_ML_MODEL_NOT_FOUND = 1004;
  ERROR_CODE_INSUFFICIENT_PERMISSIONS = 1005;
  ERROR_CODE_QUOTA_EXCEEDED = 1006;
  ERROR_CODE_RATE_LIMIT_EXCEEDED = 1007;
  ERROR_CODE_SERVICE_UNAVAILABLE = 1008;
  ERROR_CODE_DATABASE_ERROR = 1009;
  ERROR_CODE_NETWORK_ERROR = 1010;
  ERROR_CODE_VALIDATION_ERROR = 1011;
  ERROR_CODE_AUTHENTICATION_FAILED = 1012;
  ERROR_CODE_AUTHORIZATION_FAILED = 1013;
  ERROR_CODE_EXPIRED_TOKEN = 1014;
  ERROR_CODE_INVALID_TOKEN = 1015;
  ERROR_CODE_SESSION_EXPIRED = 1016;
  ERROR_CODE_ACCOUNT_LOCKED = 1017;
  ERROR_CODE_PASSWORD_EXPIRED = 1018;
  ERROR_CODE_MFA_REQUIRED = 1019;
  ERROR_CODE_MFA_FAILED = 1020;
  ERROR_CODE_DEVICE_OFFLINE = 1021;
  ERROR_CODE_DEVICE_BUSY = 1022;
  ERROR_CODE_DEVICE_ERROR = 1023;
  ERROR_CODE_SIGNAL_QUALITY_POOR = 1024;
  ERROR_CODE_LEAD_DISCONNECTED = 1025;
  ERROR_CODE_BATTERY_LOW = 1026;
  ERROR_CODE_MEMORY_INSUFFICIENT = 1027;
  ERROR_CODE_STORAGE_FULL = 1028;
  ERROR_CODE_PROCESSING_TIMEOUT = 1029;
  ERROR_CODE_CONCURRENT_MODIFICATION = 1030;
  ERROR_CODE_DEPENDENCY_FAILURE = 1031;
  ERROR_CODE_EXTERNAL_SERVICE_ERROR = 1032;
  ERROR_CODE_CONFIGURATION_ERROR = 1033;
  ERROR_CODE_MAINTENANCE_MODE = 1034;
  ERROR_CODE_FEATURE_DISABLED = 1035;
  ERROR_CODE_LICENSE_EXPIRED = 1036;
  ERROR_CODE_QUOTA_LIMIT_REACHED = 1037;
  ERROR_CODE_SUBSCRIPTION_EXPIRED = 1038;
  ERROR_CODE_PAYMENT_REQUIRED = 1039;
  ERROR_CODE_TRIAL_EXPIRED = 1040;
}

// Error severity
enum ErrorSeverity {
  ERROR_SEVERITY_UNSPECIFIED = 0;
  ERROR_SEVERITY_LOW = 1;
  ERROR_SEVERITY_MEDIUM = 2;
  ERROR_SEVERITY_HIGH = 3;
  ERROR_SEVERITY_CRITICAL = 4;
}

// Error category
enum ErrorCategory {
  ERROR_CATEGORY_UNSPECIFIED = 0;
  ERROR_CATEGORY_SYSTEM = 1;
  ERROR_CATEGORY_USER = 2;
  ERROR_CATEGORY_BUSINESS = 3;
  ERROR_CATEGORY_NETWORK = 4;
  ERROR_CATEGORY_DATABASE = 5;
  ERROR_CATEGORY_SECURITY = 6;
  ERROR_CATEGORY_VALIDATION = 7;
  ERROR_CATEGORY_INTEGRATION = 8;
  ERROR_CATEGORY_PERFORMANCE = 9;
  ERROR_CATEGORY_AVAILABILITY = 10;
}

// Detailed error message
message Error {
  ErrorCode code = 1;
  string message = 2;
  string details = 3;
  ErrorSeverity severity = 4;
  ErrorCategory category = 5;
  string field = 6;
  string request_id = 7;
  google.protobuf.Any metadata = 8;
  repeated ErrorField errors = 9;
  google.protobuf.Timestamp timestamp = 10;
  string stack_trace = 11;
  string correlation_id = 12;
  string service = 13;
  string version = 14;
  map<string, string> context = 15;
}

// Error field for validation errors
message ErrorField {
  string field = 1;
  string message = 2;
  ErrorCode code = 3;
  string rejected_value = 4;
  string expected_value = 5;
}

// Error response wrapper
message ErrorResponse {
  Error error = 1;
  google.rpc.Status status = 2;
  string request_id = 3;
  google.protobuf.Timestamp timestamp = 4;
}

// Error details for validation
message ValidationErrorDetails {
  repeated ErrorField field_errors = 1;
  map<string, string> validation_rules = 2;
}

// Error details for rate limiting
message RateLimitErrorDetails {
  int32 limit = 1;
  int32 remaining = 2;
  int32 reset_time = 3;
  string window = 4;
}

// Error details for quota
message QuotaErrorDetails {
  string metric = 1;
  int32 limit = 2;
  int32 current = 3;
  google.protobuf.Timestamp reset_time = 4;
}

// Error details for authentication
message AuthenticationErrorDetails {
  string auth_method = 1;
  string failure_reason = 2;
  int32 attempts_remaining = 3;
  google.protobuf.Timestamp lockout_until = 4;
}

// Error details for authorization
message AuthorizationErrorDetails {
  string required_permission = 1;
  string user_role = 2;
  repeated string available_permissions = 3;
}

// Error details for resource not found
message NotFoundErrorDetails {
  string resource_type = 1;
  string resource_id = 2;
  string search_criteria = 3;
}

// Error details for service unavailable
message ServiceUnavailableErrorDetails {
  string service_name = 1;
  string reason = 2;
  google.protobuf.Timestamp retry_after = 3;
  repeated string alternative_services = 4;
}

// Error details for timeout
message TimeoutErrorDetails {
  string operation = 1;
  google.protobuf.Duration timeout = 2;
  google.protobuf.Duration elapsed = 3;
  string timeout_type = 4;
}

// Error details for external service
message ExternalServiceErrorDetails {
  string service_name = 1;
  string endpoint = 2;
  int32 status_code = 3;
  string response_body = 4;
  google.protobuf.Duration response_time = 5;
}

// Error details for processing
message ProcessingErrorDetails {
  string stage = 1;
  string input_type = 2;
  string output_type = 3;
  int32 items_processed = 4;
  int32 items_failed = 5;
  repeated string failure_reasons = 6;
}
